--- a/hunter.html
+++ b/hunter.html
@@ -61,45 +61,94 @@
 
     <div class="container">
         <div class="d-flex">
-        <div><img  width=110 height=110 id="0" onclick="butcheck(0)" src="bigcat.jpg"></div>
-        <div><img  width=110 height=110 id="1" onclick="butcheck(1)" src="bigcat.jpg"></div>
-        <div><img  width=110 height=110 id="2" onclick="butcheck(2)" src="bigcat.jpg"></div>
-        <div><img  width=110 height=110 id="3" onclick="butcheck(3)" src="bigcat.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(4)" src="bigcat.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(5)" src="bigcat.jpg"></div>
+        <div><img  id="img1" width=110 height=110  onclick="check(0)" src="REDbush.jpg"></div>
+        <div><img  id="img2" width=110 height=110  onclick="check(1)" src="REDbush.jpg"></div>
+        <div><img  id="img3" width=110 height=110  onclick="check(2)" src="REDbush.jpg"></div>
+        <div><img  id="img4" width=110 height=110  onclick="check(3)" src="REDbush.jpg"></div>
+        <div><img  id="img5" width=110 height=110  onclick="check(4)" src="REDbush.jpg"></div>
+        <div><img  id="img6" width=110 height=110  onclick="check(5)" src="REDbush.jpg"></div>
          </div>
       </div>
       <div class="container">
         <div class="d-flex">
-        <div><img  width=110 height=110 id="0" onclick="butcheck(6)" src="grass-2.jpg"></div>
-        <div><img  width=110 height=110 id="1" onclick="butcheck(7)" src="grass-2.jpg"></div>
-        <div><img  width=110 height=110 id="2" onclick="butcheck(8)" src="grass-2.jpg"></div>
-        <div><img  width=110 height=110 id="3" onclick="butcheck(9)" src="grass-2.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(10)" src="grass-2.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(11)" src="grass-2.jpg"></div>
+        <div><img  id="img7" width=110 height=110  onclick="check(6)" src="REDbush.jpg"></div>
+        <div><img  id="img8" width=110 height=110  onclick="check(7)" src="REDbush.jpg"></div>
+        <div><img  id="img9" width=110 height=110  onclick="check(8)" src="REDbush.jpg"></div>
+        <div><img  id="img10" width=110 height=110  onclick="check(9)" src="REDbush.jpg"></div>
+        <div><img  id="img11" width=110 height=110  onclick="check(10)" src="REDbush.jpg"></div>
+        <div><img  id="img12" width=110 height=110  onclick="check(11)" src="REDbush.jpg"></div>
          </div>
       </div>
       <div class="container">
         <div class="d-flex">
-        <div><img  width=110 height=110 id="0" onclick="butcheck(12)" src="how-to-get-rid-of-mice-hero.jpg"></div>
-        <div><img  width=110 height=110 id="1" onclick="butcheck(13)" src="how-to-get-rid-of-mice-hero.jpg"></div>
-        <div><img  width=110 height=110 id="2" onclick="butcheck(14)" src="how-to-get-rid-of-mice-hero.jpg"></div>
-        <div><img  width=110 height=110 id="3" onclick="butcheck(15)" src="how-to-get-rid-of-mice-hero.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(16)" src="how-to-get-rid-of-mice-hero.jpg"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(17)" src="how-to-get-rid-of-mice-hero.jpg"></div>
+        <div><img  id="img13" width=110 height=110  onclick="check(12)" src="REDbush.jpg"></div>
+        <div><img  id="img14" width=110 height=110  onclick="check(13)" src="REDbush.jpg"></div>
+        <div><img  id="img15" width=110 height=110  onclick="check(14)" src="REDbush.jpg"></div>
+        <div><img  id="img16" width=110 height=110  onclick="check(15)" src="REDbush.jpg"></div>
+        <div><img  id="img17" width=110 height=110  onclick="check(16)" src="REDbush.jpg"></div>
+        <div><img  id="img18" width=110 height=110  onclick="check(17)" src="REDbush.jpg"></div>
          </div>
       </div>
       <div class="container">
         <div class="d-flex">
-        <div><img  width=110 height=110 id="0" onclick="butcheck(18)" src="Burning_Bush_2_BB_grande.png"></div>
-        <div><img  width=110 height=110 id="1" onclick="butcheck(19)" src="Burning_Bush_2_BB_grande.png"></div>
-        <div><img  width=110 height=110 id="2" onclick="butcheck(20)" src="Burning_Bush_2_BB_grande.png"></div>
-        <div><img  width=110 height=110 id="3" onclick="butcheck(21)" src="Burning_Bush_2_BB_grande.png"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(22)" src="Burning_Bush_2_BB_grande.png"></div>
-        <div><img  width=110 height=110 id="4" onclick="butcheck(23)" src="Burning_Bush_2_BB_grande.png"></div>
+        <div><img  id="img19" width=110 height=110  onclick="check(18)" src="REDbush.jpg"></div>
+        <div><img  id="img20" width=110 height=110  onclick="check(19)" src="REDbush.jpg"></div>
+        <div><img  id="img21" width=110 height=110  onclick="check(20)" src="REDbush.jpg"></div>
+        <div><img  id="img22" width=110 height=110  onclick="check(21)" src="REDbush.jpg"></div>
+        <div><img  id="img23" width=110 height=110  onclick="check(22)" src="REDbush.jpg"></div>
+        <div><img  id="img24" width=110 height=110  onclick="check(23)" src="REDbush.jpg"></div>
          </div>
       </div>
+<script>
 
+const ids = ["img1", "img2", "img3", "img4", "img5", "img6", "img7", "img8", "img9", "img10", "img1", "img11", "img12", "img13", "img14", "img15", "img16", "img17", "img18", "img19", "img20", "img21", "img22", "img23", "img24"];
+
+
+let checkCount = 0;
+var penalty = 0;
+let lastCheck = 0;
+let mouseLocation = 13;
+let catLocation = 21;
+let gameOver = false;
+
+function check(position)
+{
+  if(gameOver)
+  {
+    return
+  }
+  const id = ids[position];
+  const image = document.getElementById(id);
+  if(position==mouseLocation)
+  {
+    img.src="mouse.jpg";
+    gameOver=true;
+    penalty=penalty-3;
+  }
+
+  else if(position==catLocation)
+  {
+    img.src="bigcat.jpg";
+    gameOver=true;
+    penalty=penalty+4;
+  }
+  else 
+  {
+    img.src="REDbush.jpg";
+  }
+  checkCount++;
+  penalty++;
+  const bushes = document.getElementById("bushes");
+  bushes.textContent = `Number of bushes checked is`+checkCount;
+
+  
+  const penalty = document.getElementById("penalty");
+  penalty.textContent = 'Penalty is '+penalty;
+  lastCheck = position;
+
+}
+
+</script>
 
 
 	</body>
